# timetrack-cli

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  default.nix  nixpkgs.json  package.yaml  pkgs.nix  project.nix  release.nix  result  shell.nix  stack.yaml  timetrack-cli.cabal
app/: Main.hs
nix/: sources.json
src/: Commands.hs  Entry.hs  Helpers.hs  Lib.hs  Lib.hs.bak  ListEntries.hs  Main.hs  Timetrack.hs
src/Commands/: Add.hs  Dir.hs  Help.hs  List.hs  NotFound.hs  Remove.hs  Update.hs
