name:                timetrack-cli
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/rpearce/timetrack-cli#readme
license:             BSD3
license-file:        LICENSE
author:              Robert Pearce
maintainer:          me@robertwpearce.com
copyright:           Robert Pearce
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Entry
                     , Helpers
                     , Commands.Add
                     , Commands.Dir
                     , Commands.Help
                     , Commands.List
                     , Commands.NotFound
                     , Commands.Remove
                     , Commands.Update
  build-depends:       base >= 4.7 && < 5
                     , directory
  default-language:    Haskell2010

executable timetrack
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints
  default-extensions:
  build-depends:       base
                     , timetrack-cli
  default-language:    Haskell2010

test-suite timetrack-cli-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , timetrack-cli
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/rpearce/timetrack-cli
