cabal-version:       2.4

name:                timetrack-cli
version:             0.1.0.1
synopsis:            â³ Use the command line to keep track of your working hours in plain text files
-- description:
homepage:            https://github.com/rpearce/timetrack-cli
bug-reports:         https://github.com/rpearce/timetrack-cli/issues
license:             BSD-3-Clause
license-file:        LICENSE
author:              Robert Pearce
maintainer:          me@robertwpearce.com
-- copyright:
category:            Text
extra-source-files:  CHANGELOG.md, README.md

executable timetrack-cli
  main-is:             Main.hs
  other-modules:       Commands.Add
                       Commands.Dir
                       Commands.Help
                       Commands.List
                       Commands.NotFound
                       Commands.Remove
                       Commands.Update
                       Entry
                       Helpers
                       Timetrack
  -- other-extensions:
  build-depends:       base ^>=4.12.0.0
                     , directory ^>=1.3.3.0
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
                       -Wall
                       -Wcompat
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wredundant-constraints
  hs-source-dirs:      src
  default-language:    Haskell2010
