cabal-version:       2.4

name:                timetrack-cli
version:             0.1.0.5
synopsis:            â³ Use the command line to keep track of your working hours in plain text files
-- description:
homepage:            https://github.com/rpearce/timetrack-cli
bug-reports:         https://github.com/rpearce/timetrack-cli/issues
license:             BSD-3-Clause
license-file:        LICENSE
author:              Robert Pearce
maintainer:          me@robertwpearce.com
-- copyright:
category:            Text
extra-source-files:  CHANGELOG.md, README.md

common warning-flags
  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N
    -Wall
    -Werror
    -Wcompat
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Widentities
    -Wpartial-fields
    -Wredundant-constraints

common deps
  build-depends:       base ^>=4.12.0.0
                     , directory ^>=1.3.3.0

executable timetrack-cli
  import:              warning-flags,
                       deps
  main-is:             Main.hs
  other-modules:       Commands.Add
                       Commands.Dir
                       Commands.Help
                       Commands.List
                       Commands.NotFound
                       Commands.Remove
                       Commands.Update
                       Entry
                       Helpers
                       Timetrack
  hs-source-dirs:      src
  default-language:    Haskell2010
